[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Ground.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ObjectSpawner.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Poppins-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/GameFieldUI.gd" type="Script" id=5]
[ext_resource path="res://Scripts/GameOverUI.gd" type="Script" id=6]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float speed = 0.08;
uniform vec2 direction = vec2(1.0, 0.0);

void fragment() {
	COLOR = texture(TEXTURE, UV + speed * direction * TIME);
} "

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/speed = 0.25
shader_param/direction = Vector2( 1, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 568, 73 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 506, 536 )
__meta__ = {
"_edit_group_": true
}

[node name="Ground" type="Sprite" parent="Floor"]
material = SubResource( 3 )
position = Vector2( 0, 196 )
scale = Vector2( 2.23483, 2.23483 )
texture = ExtResource( 1 )
offset = Vector2( 0, -87.7024 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
visible = false
shape = SubResource( 1 )

[node name="ObjectSpawner" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="SpawnDelay" type="Timer" parent="ObjectSpawner"]
wait_time = 2.0
autostart = true

[node name="DeleteDelay" type="Timer" parent="ObjectSpawner"]
wait_time = 10.0

[node name="SpawnPos" type="Position2D" parent="ObjectSpawner"]
position = Vector2( 1080, 465 )

[node name="Obstacles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 92, 414 )

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="GameFieldUI" type="Control" parent="GameUI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Distance" type="Label" parent="GameUI/GameFieldUI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 177.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 4 )
text = "Score: "

[node name="GameOverScreen" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="GameOverUI" type="Control" parent="GameOverScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Distance" type="Label" parent="GameOverScreen/GameOverUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -34.0
margin_right = 282.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
text = "Score: "
align = 1
valign = 1

[connection signal="timeout" from="ObjectSpawner/SpawnDelay" to="ObjectSpawner" method="_on_SpawnDelay_timeout"]
